--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,23 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.jupiter.version>5.10.2</junit.jupiter.version>
-        <mockito.version>5.12.0</mockito.version>
-        <testcontainers.version>1.19.7</testcontainers.version>
-        <slf4j.version>2.0.13</slf4j.version>
+        <junit.jupiter.version>5.13.0-RC1</junit.jupiter.version>
+        <mockito.version>5.18.0</mockito.version>
+        <testcontainers.version>1.21.0</testcontainers.version>
+        <slf4j.version>2.0.17</slf4j.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.4.4.Final</version>
+            <version>7.0.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.7.3</version>
+            <version>42.7.6</version>
         </dependency>
 
         <dependency>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.14</version>
+            <version>1.5.18</version>
         </dependency>
 
         <dependency>
